--- a/localisation/dec1_disasters_l_english.yml
+++ b/localisation/dec1_disasters_l_english.yml
@@ -1,29 +1,41 @@
 ﻿l_english:
 
- ##########################
- # DISASTERS LOCALISATION #
- ##########################
+  ##########################
+  # DISASTERS LOCALISATION #
+  ##########################
 
-  # Dual Monarchy
+    # Dual Monarchy
 
- dual_monarchy_anglois_civil_war: "Anglois Civil War"
- dual_monarchy_anglois_civil_war_desc: ""
+      dual_monarchy_anglois_civil_war: "Anglois Civil War"
+      dual_monarchy_anglois_civil_war_desc: ""
 
-  # People's Republic of China
+    # People's Republic of China
 
- dec1_prc_democratic_socialist_revolt: "Democratic Socialist Revolt"
- dec1_prc_democratic_socialist_revolt_desc: ""
+      dec1_prc_democratic_socialist_revolt: "Democratic Socialist Revolt"
+      dec1_prc_democratic_socialist_revolt_desc: ""
+
+    # American Civil War
+
+    dec1_usa_american_civil_war: "American Civil War"
 
   ################################
   # DISASTER EVENTS LOCALISATION #
   ################################
 
-  # Dual Monarchy
+   # Dual Monarchy
 
- dec1_disaster_events_anglois_civil_war.1.t: "The Anglois Civil War"
- dec1_disaster_events_anglois_civil_war.1.d: "With the foundation of the Dual Monarchy came the cultural mix of British and French cultures known as the 'Anglois'. Many French and English populace have yet to embrace this new natural evolution of our Grand Protectorate and many have even begun openly resisting this change, leading to an armed conflict between the Anglois dominated peoples against what remains of English and French cultural holdouts.\n\nWe must crush this resistance if we wish for this Dual Monarchy to not become a simple footnote in history!"
- dec1_disaster_events_anglois_civil_war.1.a: "Suppress the Rebels"
- dec1_disaster_events_anglois_civil_war.1.b: "Appease the British and French"
- dec1_disaster_events_anglois_civil_war.1.c: "Surrender the Anglois Culture"
+    dec1_disaster_events_anglois_civil_war.1.t: "The Anglois Civil War"
+    dec1_disaster_events_anglois_civil_war.1.d: "With the foundation of the Dual Monarchy came the cultural mix of British and French cultures known as the 'Anglois'. Many French and English populace have yet to embrace this new natural evolution of our Grand Protectorate and many have even begun openly resisting this change, leading to an armed conflict between the Anglois dominated peoples against what remains of English and French cultural holdouts.\n\nWe must crush this resistance if we wish for this Dual Monarchy to not become a simple footnote in history!"
+    dec1_disaster_events_anglois_civil_war.1.a: "Suppress the Rebels"
+    dec1_disaster_events_anglois_civil_war.1.b: "Appease the British and French"
+    dec1_disaster_events_anglois_civil_war.1.c: "Surrender the Anglois Culture"
 
-  # People's Republic of China
+   # People's Republic of China
+
+  #################################
+  # DISASTER TOOLTIP LOCALISATION #
+  #################################
+
+   # United States of America
+
+    dec1_usa_american_civil_war_tt_1: "owns at least §Y14§! provinces in §YSoutheast America§! or §YMississippi§! regions producing §YCotton§!"
