--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -1051,17 +1051,17 @@
  PRC_ideas: "People's Republic of China Ideas"
  PRC_ideas_start: "People's Republic of China Traditions"
  PRC_ideas_bonus: "The Great Republic"
- PRC_proper_election_cycle: "Proper Election Cycles"
- PRC_proper_election_cycle_desc: "§RDescription Available in 4.1.0§!"
+ PRC_defensive_stance: "Defensive Stance"
+ PRC_defensive_stance_desc: "§RDescription Available in 4.1.0§!"
  PRC_great_generals: "Great Chinese Generals"
  PRC_great_generals_desc: "§RDescription Available in 4.1.0§!"
  PRC_the_chinese_state: "The Chinese State"
  PRC_the_chinese_state_desc: "§RDescription Available in 4.1.0§!"
  PRC_eastern_spy_network: "Eastern Spy Network"
  PRC_eastern_spy_network_desc: "§RDescription Available in 4.1.0§!"
- PRC_dictatorship_styled_rule: "Dictatorship-Styled Rule"
+ PRC_dictatorship_styled_rule: "Dictatorship Rule"
  PRC_dictatorship_styled_rule_desc: "§RDescription Available in 4.1.0§!"
- PRC_lockdown_effective: "Lockdown Effective"
+ PRC_lockdown_effective: "Lockdown Effect"
  PRC_lockdown_effective_desc: "§RDescription Available in 4.1.0§!"
  PRC_science_of_the_future: "Science of the Future"
  PRC_science_of_the_future_desc: "§RDescription Available in 4.1.0§!"
