--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -132,7 +132,7 @@
  KRV_ADJ: "Kievan"
  TIE: "Tibetan Empire"
  TIE_ADJ: "Tibetan"
- ARN: "Greater Armenia"
+ ARE: "Greater Armenia"
  ARN_ADJ: "Armenian"
  ARR: "Republic of Armenia"
  ARR_ADJ: "Armenian"
